[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = { version = "0.17.3", features = ["native-tls"] }
url = "2.3.1"
serde_json = "1.0.72"
ring = "0.16.20"
base64 = "0.13.0"